fix(lightMode): make disabled button visible

--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,12 @@ button.primary {
     color: #646cff;
     outline: 1px solid #1a1a1a;
   }
+  button:disabled {
+    color: #b2b2b2;
+    img {
+      filter: invert(30%);
+    }
+  }
   .elevation-1 {
     background-color: #dedede;
   }
